// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Bucket/Toolbar/CreatePackage should render children when popover is opened 1`] = `
<div>
  <div
    class="makeStyles-root-7"
  >
    <button
      class="makeStyles-root-6"
      role="button"
    >
      Create package
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root makeStyles-backdrop-9"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiPaper-root makeStyles-popup-8 MuiPaper-elevation4 MuiPaper-rounded"
    >
      Hello, Popover!
    </div>
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar/CreatePackage should render with empty selection 1`] = `
<div>
  <div
    class="makeStyles-root-2"
  >
    <button
      class="makeStyles-root-1 custom-class"
      role="button"
    >
      Create package
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root makeStyles-backdrop-4"
      style="opacity: 0; visibility: hidden;"
    />
  </div>
</div>
`;
